Fix jumpy inputs

--- a/web/src/features/calendar/calendar.css
+++ b/web/src/features/calendar/calendar.css
@@ -27,9 +27,6 @@
     justify-content: space-evenly;
   }
 
-  .fc .fc-toolbar {
-    justify-content: space-evenly;
-  }
   .fc .fc-toolbar.fc-header-toolbar {
     margin-bottom: 0;
   }
